<resources>
    <string name="app_name">ToDoApp</string>
    <string name="add_item">Add Item</string>
    <string name="title_will_be_here">Title will be here…</string>
    <string name="description_will_be_here">Description will be here…</string>
    <string name="number_will_be_here">Number will be here…</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="custom_dialog">Custom Dialog</string>
    <string name="undo">Undo</string>
    <string name="update_item">Update Item</string>
</resources>