<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/dialog_label"
        android:text="@string/add_item"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/dialog_input_title"
        android:hint="@string/title_will_be_here"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/dialog_label"/>

    <EditText
        android:id="@+id/dialog_input_description"
        android:hint="@string/description_will_be_here"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/dialog_input_title"/>

    <Button
        android:id="@+id/dialog_ok_button"
        android:text="@string/ok"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/dialog_cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/dialog_input_description"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/dialog_cancel_button"
        android:text="@string/cancel"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/dialog_ok_button"
        app:layout_constraintTop_toBottomOf="@+id/dialog_input_description"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>